@@ -23,6 +23,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug fixes and other patches
 
+    - The options CGI now rejects all but HTTP GET and POST requests.
+      (LP: #1372199)
+
     - A list's poster password will now be accepted on an Urgent: header.
       (LP: #1371678)
 
